--- a/Eurocopa.html
+++ b/Eurocopa.html
@@ -439,10 +439,10 @@
         <h2>REDES SOCIALES</h2>
         <div class="social-icons">
             <a href="https://instagram.com" target="_blank" aria-label="Instagram">
-                <img src="Imagenes/Redes sociales/INSTAGRAM.svg.png" alt="Instagram">
+                <img src="Imagenes/Redessociales/INSTAGRAM.svg.png" alt="Instagram">
             </a>
             <a href="https://tiktok.com" target="_blank" aria-label="Tik Tok">
-                <img src="Imagenes/Redes sociales/TIKTOK.png" alt="TiK Tok">
+                <img src="Imagenes/Redessociales/TIKTOK.png" alt="TiK Tok">
             </a>
         </div>
     </section>
@@ -451,8 +451,8 @@
     
         <section id="pagos">
             <div class="pagos-iconos">
-                <img src="Imagenes/Redes sociales/PAYPAL.png" alt="PayPal">
-                <img src="Imagenes/Redes sociales/TRANSFERENCIA.png" alt="Transferencia">
+                <img src="Imagenes/Redessociales/PAYPAL.png" alt="PayPal">
+                <img src="Imagenes/Redessociales/TRANSFERENCIA.png" alt="Transferencia">
             </div>
         </section>
     
