--- a/index.html
+++ b/index.html
@@ -96,6 +96,11 @@
         <p><b>Serigrafía: 2€ - Cada Parche: 1€</b></p>
     </section>
 
+    <div id="modal">
+        <span class="close">&times;</span> <!-- Botón de cerrar -->
+        <img id="modal-img" src="" alt="Imagen ampliada">
+    </div>
+
     <section id="inicio">
         <h2>NOVEDADES</h2>
         <div class="productos">
