--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </section>
         <p>-----------------------------------------------------------------</p>
         <p>Los pagos de los pedidos se deben realizar a través de <b>PayPal</b> o por <b>transferencia bancaria</b>.</p>
-        <p>Los paquetes tardan en llegar en torno a <b>10/15 días laborables</b>.</p>
+        <p>Los paquetes tardan en llegar en torno a <b>15/20 días</b>.</p>
         <p>Proporcionamos un <b>número de seguimiento</b> con el que se puede seguir el rastro de tu paquete.</p>
         <p>-----------------------------------------------------------------</p>
         <p><b>Disponemos de todas nuestras camisetas en versión FAN y PLAYER.</b></p>
