--- a/index.html
+++ b/index.html
@@ -96,10 +96,10 @@
         <p><b>Serigrafía: 2€ - Cada Parche: 1€</b></p>
     </section>
 
-    <div id="modal">
+    <section id="modal">
         <span class="close">&times;</span> <!-- Botón de cerrar -->
         <img id="modal-img" src="" alt="Imagen ampliada">
-    </div>
+    </section>
 
     <section id="inicio">
         <h2>NOVEDADES</h2>
